--- a/TestBeltrikov.ipynb
+++ b/TestBeltrikov.ipynb
@@ -53,17 +53,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "172e1452-07f5-4aa1-ab09-3e143a92eec2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: transformers in c:\\users\\mamay\\appdata\\roaming\\python\\python39\\site-packages (4.33.2)\n",
+      "Requirement already satisfied: filelock in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from transformers) (3.12.4)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.15.1 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from transformers) (0.17.1)\n",
+      "Requirement already satisfied: numpy>=1.17 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from transformers) (1.20.1)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from transformers) (23.1)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from transformers) (6.0.1)\n",
+      "Requirement already satisfied: regex!=2019.12.17 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from transformers) (2022.3.15)\n",
+      "Requirement already satisfied: requests in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from transformers) (2.31.0)\n",
+      "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in c:\\users\\mamay\\appdata\\roaming\\python\\python39\\site-packages (from transformers) (0.13.3)\n",
+      "Requirement already satisfied: safetensors>=0.3.1 in c:\\users\\mamay\\appdata\\roaming\\python\\python39\\site-packages (from transformers) (0.3.3)\n",
+      "Requirement already satisfied: tqdm>=4.27 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from transformers) (4.66.1)\n",
+      "Requirement already satisfied: fsspec in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (2023.9.1)\n",
+      "Requirement already satisfied: typing-extensions>=3.7.4.3 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from huggingface-hub<1.0,>=0.15.1->transformers) (4.7.1)\n",
+      "Requirement already satisfied: colorama in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from tqdm>=4.27->transformers) (0.4.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from requests->transformers) (3.2.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from requests->transformers) (3.4)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from requests->transformers) (1.26.16)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\programdata\\anaconda3\\envs\\ds_practicum_env\\lib\\site-packages (from requests->transformers) (2023.7.22)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install transformers"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "851c0b95-f230-4043-8318-b2da0089820a",
    "metadata": {},
    "outputs": [],
@@ -76,17 +103,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4763400d-d627-4b4d-943c-4690a67d6397",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: protobuf==3.20.0 in c:\\users\\mamay\\appdata\\roaming\\python\\python39\\site-packages (3.20.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "pip install protobuf==3.20.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1a70bbac-e930-488a-b3e8-9148fe62bbf0",
    "metadata": {},
    "outputs": [],
@@ -96,17 +133,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0c3dc718-9334-4fab-aa25-78ef2b548509",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Optimal performance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Utilise resources</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Enhance productivity</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Conduct an analysis</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Maintain a high standard</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Implement best practices</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ensure compliance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Streamline operations</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Foster innovation</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Drive growth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Leverage synergies</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Demonstrate leadership</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Exercise due diligence</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Maximize stakeholder value</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Prioritise tasks</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Facilitate collaboration</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Monitor performance metrics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Execute strategies</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Gauge effectiveness</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Champion change</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Optimal performance\n",
+       "0             Utilise resources\n",
+       "1          Enhance productivity\n",
+       "2           Conduct an analysis\n",
+       "3      Maintain a high standard\n",
+       "4      Implement best practices\n",
+       "5             Ensure compliance\n",
+       "6         Streamline operations\n",
+       "7             Foster innovation\n",
+       "8                  Drive growth\n",
+       "9            Leverage synergies\n",
+       "10       Demonstrate leadership\n",
+       "11       Exercise due diligence\n",
+       "12   Maximize stakeholder value\n",
+       "13             Prioritise tasks\n",
+       "14     Facilitate collaboration\n",
+       "15  Monitor performance metrics\n",
+       "16           Execute strategies\n",
+       "17          Gauge effectiveness\n",
+       "18              Champion change"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "terms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "70a8bf10-203f-4eb8-b6f9-0910d5bde2cd",
    "metadata": {},
    "outputs": [],
@@ -117,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "801cb51c-6ec7-45c6-9fc9-50b5825b90e4",
    "metadata": {},
    "outputs": [],
@@ -129,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "9aa8ba6c-3cad-4e05-a48f-832b975ea0b5",
    "metadata": {},
    "outputs": [],
@@ -142,17 +312,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9b6cf9b4-c212-4576-a2c9-5fbbd802575a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"In today's meeting, we discussed a variety of issues affecting our department. The weather was unusually sunny, a pleasant backdrop to our serious discussions. We came to the consensus that we need to do better in terms of performance. Sally brought doughnuts, which lightened the mood. It's important to make good use of what we have at our disposal. During the coffee break, we talked about the upcoming company picnic. We should aim to be more efficient and look for ways to be more creative in our daily tasks. Growth is essential for our future, but equally important is building strong relationships with our team members. As a reminder, the annual staff survey is due next Friday. Lastly, we agreed that we must take time to look over our plans carefully and consider all angles before moving forward. On a side note, David mentioned that his cat is recovering well from surgery.\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "277ea831-a01b-439e-b968-d312a0dcc008",
    "metadata": {},
    "outputs": [],
@@ -162,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c10dd20c-038c-482a-b069-a059b7edd92a",
    "metadata": {},
    "outputs": [],
@@ -174,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e6391d74-0411-4e2e-b242-13dc01cbd82b",
    "metadata": {},
    "outputs": [],
@@ -205,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "71661cef-6b3a-4a3f-a657-10553ef96766",
    "metadata": {},
    "outputs": [],
@@ -216,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "cafe29ed-daf4-4f01-9a12-e27ea6baa301",
    "metadata": {},
    "outputs": [],
@@ -233,10 +414,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "788b6a9d-f6e8-4141-ad94-ee884ab20cb5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Text: In today's meeting, we discussed a variety of issues affecting our department. The weather was unusually sunny, a pleasant backdrop to our serious discussions. We came to the consensus that we need to do better in terms of performance. Sally brought doughnuts, which lightened the mood. It's important to make good use of what we have at our disposal. During the coffee break, we talked about the upcoming company picnic. We should aim to be more efficient and look for ways to be more creative in our daily tasks. Growth is essential for our future, but equally important is building strong relationships with our team members. As a reminder, the annual staff survey is due next Friday. Lastly, we agreed that we must take time to look over our plans carefully and consider all angles before moving forward. On a side note, David mentioned that his cat is recovering well from surgery.\n",
+      "Recommended Phrase: Maintain a high standard\n",
+      "Similarity Score: 0.54\n",
+      "\n",
+      "Original Text: In today's meeting, we discussed a variety of issues affecting our department. The weather was unusually sunny, a pleasant backdrop to our serious discussions. We came to the consensus that we need to do better in terms of performance. Sally brought doughnuts, which lightened the mood. It's important to make good use of what we have at our disposal. During the coffee break, we talked about the upcoming company picnic. We should aim to be more efficient and look for ways to be more creative in our daily tasks. Growth is essential for our future, but equally important is building strong relationships with our team members. As a reminder, the annual staff survey is due next Friday. Lastly, we agreed that we must take time to look over our plans carefully and consider all angles before moving forward. On a side note, David mentioned that his cat is recovering well from surgery.\n",
+      "Recommended Phrase: Exercise due diligence\n",
+      "Similarity Score: 0.55\n",
+      "\n",
+      "Original Text: In today's meeting, we discussed a variety of issues affecting our department. The weather was unusually sunny, a pleasant backdrop to our serious discussions. We came to the consensus that we need to do better in terms of performance. Sally brought doughnuts, which lightened the mood. It's important to make good use of what we have at our disposal. During the coffee break, we talked about the upcoming company picnic. We should aim to be more efficient and look for ways to be more creative in our daily tasks. Growth is essential for our future, but equally important is building strong relationships with our team members. As a reminder, the annual staff survey is due next Friday. Lastly, we agreed that we must take time to look over our plans carefully and consider all angles before moving forward. On a side note, David mentioned that his cat is recovering well from surgery.\n",
+      "Recommended Phrase: Maximize stakeholder value\n",
+      "Similarity Score: 0.56\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "for suggestion in suggestions:\n",
     "    original_text, recommended_phrase, similarity_score = suggestion\n",
