--- a/TestBeltrikov.ipynb
+++ b/TestBeltrikov.ipynb
@@ -5,19 +5,19 @@
    "id": "872e360c-cb9b-40ba-a37a-9dae08b29eb8",
    "metadata": {},
    "source": [
-    "Project Task: Text Improvement Engine EN\r\n",
-    "\r\n",
-    "Objective:\r\n",
-    "Develop a tool that analyses a given text and suggests improvements based on the similarity to a list of \"standardised\" phrases. These standardised phrases represent the ideal way certain concepts should be articulated, and the tool should recommend changes to align the input text closer to these standards.\r\n",
-    "\r\n",
-    "Requirements:\r\n",
-    "Data Input: Create a method for the user to input the text they wish to analyse. This could be through a simple UI or via a text file in CLI.\r\n",
-    "\r\n",
-    "Standardised Phrases: Pre-load the tool with a list of standardised phrases (e.g., business jargon, scientific terminology, etc.).\r\n",
-    "\r\n",
-    "Text Analysis: Use a pre-trained language model to find phrases in the input text that are semantically similar to any of the standardised phrases. Consider using techniques like cosine similarity with word embeddings. \r\n",
-    "\r\n",
-    "Suggestions: Provide a list of suggestions to replace phrases in the input text with their more \"standard\" versions. Each suggestion should show the original phrase, the recommended replacement, and the similarity score.\r\n"
+    "Project Task: Text Improvement Engine EN\n",
+    "\n",
+    "Objective:\n",
+    "Develop a tool that analyses a given text and suggests improvements based on the similarity to a list of \"standardised\" phrases. These standardised phrases represent the ideal way certain concepts should be articulated, and the tool should recommend changes to align the input text closer to these standards.\n",
+    "\n",
+    "Requirements:\n",
+    "Data Input: Create a method for the user to input the text they wish to analyse. This could be through a simple UI or via a text file in CLI.\n",
+    "\n",
+    "Standardised Phrases: Pre-load the tool with a list of standardised phrases (e.g., business jargon, scientific terminology, etc.).\n",
+    "\n",
+    "Text Analysis: Use a pre-trained language model to find phrases in the input text that are semantically similar to any of the standardised phrases. Consider using techniques like cosine similarity with word embeddings. \n",
+    "\n",
+    "Suggestions: Provide a list of suggestions to replace phrases in the input text with their more \"standard\" versions. Each suggestion should show the original phrase, the recommended replacement, and the similarity score.\n"
    ]
   },
   {
@@ -25,7 +25,7 @@
    "id": "156d419e-7f8b-40cc-baec-bbf6b284a69a",
    "metadata": {},
    "source": [
-    "Проектная задача: Улучшение текста с использованием движка  RU"
+    "Проектная задача: Механизм улучшения текста  RU"
    ]
   },
   {
@@ -472,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
